--- a/sections/blogs.liquid
+++ b/sections/blogs.liquid
@@ -17,7 +17,7 @@
         <span>{{ article.id }} </span> <span> | </span> <span>{{ article.author }}</span>
         <p class="py-2">{{ article.content }}</p>
         <div class="pt-2">
-          <a href="{{ article.url | escape }}" class="btn btn-outline btn-neutral">Read More</a>
+          <a href="{{ article.url }}" class="btn btn-outline btn-neutral">Read More</a>
         </div>
       </div>
     {%- endfor -%}
