Footer added to the list-collection

--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -46,7 +46,7 @@
     </div>
   </nav>
   <aside>
-    <p>Copyright © {{ 'now' | date: '%Y' }} - All right reserved by {{ settings.site_name }}</p>
+    <p>Copyright © {{ 'now' | date: '%Y' }} - All right reserved by {{ section.settings.copyright_owner }}</p>
   </aside>
 </footer>
 
