--- a/sections/collection.liquid
+++ b/sections/collection.liquid
@@ -15,7 +15,7 @@
   {% if collection.products.size > 0 %}
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
       {% for product in collection.products %}
-        {% render 'card_single', product_card_product: product %}
+        {% render 'product_single', product_card_product: product %}
       {% endfor %}
     </div>
 
