main product schema edited

--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -38,6 +38,14 @@
 {% schema %}
 {
   "name": "Main product",
-  "settings": []
+  "settings": [
+    {
+      "type": "text",
+      "id": "product_id",
+      "label": "product name",
+      "default": "my product",
+      "info": "Enter the name of your product."
+    }
+  ]
 }
 {% endschema %}
