--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -38,14 +38,6 @@
 {% schema %}
 {
   "name": "Main product",
-  "settings": [
-    {
-      "type": "text",
-      "id": "product_id",
-      "label": "product name",
-      "default": "my product",
-      "info": "Enter the name of your product."
-    }
-  ]
+  "settings": []
 }
 {% endschema %}
